--- a/index.html
+++ b/index.html
@@ -6,28 +6,58 @@
     <title>DNL Remodelações</title>
     <meta name="description" content="Especialistas em remodelações e construções residenciais e comerciais.">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <!-- Importação das Fontes da Identidade Visual -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&family=Open+Sans:wght@400;600&family=Oswald:wght@700&display=swap" rel="stylesheet">
+    
     <style>
       body {
-        font-family: 'Inter', sans-serif;
+        font-family: 'Open Sans', sans-serif;
+        background-color: #F5F5F5;
+        color: #333333;
+      }
+      h1, h2, h3, h4, h5, h6 {
+        font-family: 'Oswald', sans-serif;
+      }
+      .font-logo {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 800; /* ExtraBold */
+      }
+      .btn, button, .nav-link {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 600; /* SemiBold */
+      }
+      /* Smooth scroll behavior */
+      html {
+        scroll-behavior: smooth;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.3",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
-  }
-}
-</script>
-</head>
-  <body class="bg-gray-50">
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <!-- Polyfill para process.env -->
+    <script>
+      window.process = {
+        env: {
+          NODE_ENV: 'development',
+          API_KEY: 'AIzaSyDKwCK_gGnHRvJMzUsEvWO0zxVrGd1INMk' 
+        }
+      };
+    </script>
+    <script type="importmap">
+    {
+      "imports": {
+        "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
+        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+        "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+        "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
+        "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.3",
+        "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
+        "react/": "https://esm.sh/react@^19.2.3/",
+        "react": "https://esm.sh/react@^19.2.3"
+      }
+    }
+    </script>
+  </head>
+  <body class="bg-[#F5F5F5] min-h-screen flex flex-col">
+    <div id="root" class="flex-grow flex flex-col"></div>
   </body>
 </html>
